# rustnetconf

./: .gitignore  .gitleaks.toml  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  TODOS.md
.cargo/: audit.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-17-dedup-config-unwrap.md
docs/superpowers/specs/: 2026-07-17-dedup-config-unwrap-design.md
examples/: edit_config.rs  get_config.rs  known_hosts.rs  multi_device.rs
rustnetconf-cli/: Cargo.toml
rustnetconf-cli/src/: connect.rs  desired.rs  inventory.rs  main.rs  state.rs
rustnetconf-cli/src/commands/: apply.rs  confirm.rs  get.rs  init.rs  mod.rs  plan.rs  rollback.rs  validate.rs
rustnetconf-cli/src/diff/: format.rs  mod.rs  tree.rs
rustnetconf-yang/: Cargo.toml  build.rs
rustnetconf-yang/src/: lib.rs  serialize.rs
rustnetconf-yang/tests/: codegen_test.rs
src/: capability.rs  client.rs  error.rs  facts.rs  lib.rs  notification.rs  session.rs  ssh_config.rs  types.rs  xml_entity.rs
src/framing/: chunked.rs  eom.rs  mod.rs
src/pool/: mod.rs
src/rpc/: filter.rs  mod.rs  operations.rs
src/transport/: known_hosts.rs  mod.rs  ssh.rs  tls.rs
tests/: integration_vendor_pool.rs  integration_vsrx.rs
tests/common/: mod.rs
tests/fixtures/: test_env.toml
tests/fixtures/commit_check/: cluster_validate_success.xml
