[workspace]
members = [".", "rustnetconf-yang", "rustnetconf-cli"]
resolver = "2"

[package]
name = "rustnetconf"
version = "0.9.0"
edition = "2021"
authors = ["fastrevmd-lab"]
description = "An async-first NETCONF 1.0/1.1 client library for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastrevmd-lab/rustnetconf"
keywords = ["netconf", "network", "automation", "ssh", "async"]
categories = ["network-programming"]

[features]
default = []
tls = ["rustls", "tokio-rustls", "rustls-pemfile", "webpki-roots"]

[dependencies]
tokio = { version = "1", features = ["full"] }
russh = { version = "0.60", default-features = false, features = ["flate2", "aws-lc-rs"] }
quick-xml = "0.37"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "aws_lc_rs"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
