[package]
name = "rustnetconf-yang"
version = "0.1.4"
edition = "2021"
authors = ["fastrevmd-lab"]
description = "YANG model code generation for rustnetconf — compile-time config validation"
license = "MIT"
repository = "https://github.com/fastrevmd-lab/rustnetconf"
keywords = ["yang", "netconf", "network", "codegen"]
categories = ["network-programming"]

[features]
generated = []

[dependencies]
rustnetconf = { version = "0.12", path = ".." }
serde = { version = "1", features = ["derive"] }
quick-xml = "0.41"
thiserror = "2"

[dev-dependencies]
serde_json = "1"

[build-dependencies]
yang2 = { version = "0.18", features = ["bundled"] }
